--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@alch/alchemy-web3": "^1.1.7",
     "@walletconnect/web3-provider": "^1.7.1",
+    "awesome-notifications": "^3.1.2",
     "babel-polyfill": "^6.26.0",
     "bnc-onboard": "^1.19.2",
     "clean-webpack-plugin": "^4.0.0",
